api/swimos_form/src/tests/derive/form/newtype_enum_variant.stderr
error: Cannot use `newtype` annotation with enum variants
 --> src/tests/derive/form/newtype_enum_variant.rs:5:5
  |
5 | /     enum A {
6 | |         #[form(newtype)]
7 | |         B(i32),
8 | |         C,
9 | |     }
  | |_____^
