api/swimos_form/src/tests/derive/form/newtype_enum_variant.rs
use swimos_form_derive::*;

fn main() {
    #[derive(Form)]
    enum A {
        #[form(newtype)]
        B(i32),
        C,
    }
}
